--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,41 @@
 
 body {
     font-family: 'Exo 2', sans-serif;
+    color: #575757;
+}
+
+.btn {
+    padding: 10px 30px;
+    box-sizing: border-box;
+    color: #fff;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+    box-shadow: none;
+    border-radius: 0;
+}
+
+.btn:hover {
+    color: #fff;
+}
+
+.btn-gold {
+    background: linear-gradient(90deg, #C0B481 54.67%, #D8D4C1 95.15%);
+}
+
+.yachts_loop .btn {
+    width: 60%;
 }
 
 .bg-dark-blue {
     background-color: #1C2148;
+}
+
+.text-gold {
+    color: #C0B481;
+}
+
+.text-main {
+    color: #575757;
 }
 
 nav li {
@@ -14,9 +45,15 @@ nav li {
 
 nav a {
     color: #fff;
+    font-weight: normal;
+
 }
 
-nav a.active {
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding: 5px;
+}
+
+.current-menu-item a {
     color: #C0B481;
 }
 
@@ -38,8 +75,39 @@ nav a:hover {
     margin-left: 1rem;
 }
 
+.dropdown-menu {
+    background-color: #1C2148;
+    border: none;
+    top: 90%;
+}
+
+section.main {
+    height: calc(100vh - 140px);
+    background-image: url('../images/main-background.png');
+    background-size: cover;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    position: relative;
+
+}
+
+section.main h1 {
+    font-size: 2rem;
+    text-shadow: 2px 2px 4px rgba(255, 255, 255, .5);
+}
+
+section.yachts {
+    background-color: #f5f5f5;
+}
+
 @media (max-width: 1200px) {
     nav a {
         font-size: .8rem;
+    }
+}
+
+@media (max-width: 990px) {
+    section.main {
+        background-position: center center;
     }
 }
