--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 body {
     font-family: 'Exo 2', sans-serif;
     color: #575757;
+    background-color: #f5f5f5;
+}
+
+.font-open-sans {
+    font-family: 'Open Sans', sans-serif;
 }
 
 .btn {
@@ -9,7 +14,7 @@ body {
     box-sizing: border-box;
     color: #fff;
     text-transform: uppercase;
-    border: 1px solid transparent;
+    border: none;
     box-shadow: none;
     border-radius: 0;
 }
@@ -32,6 +37,10 @@ body {
 
 .text-gold {
     color: #C0B481;
+}
+
+a.text-gold:hover {
+    color: #C0B481 ;
 }
 
 .text-main {
@@ -96,8 +105,79 @@ section.main h1 {
     text-shadow: 2px 2px 4px rgba(255, 255, 255, .5);
 }
 
-section.yachts {
+section.yachts, section.new-yacht {
     background-color: #f5f5f5;
+}
+
+section.image {
+    min-height: 550px;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+section.map {
+    min-height: 200px;
+}
+
+section.news a {
+    text-decoration: none;
+}
+
+section.news .img {
+    height: 300px;
+    text-align: center;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.card {
+    background-color: #fff;
+    border-radius: 0;
+    border: none;
+    padding: 40px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+}
+
+.caption {
+    padding: 20px 0;
+    background-color: rgba(0,0,0,.65);
+    color: #fff;
+    min-height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.caption:hover {
+    text-decoration: none;
+}
+
+.navigation {
+    width: 100%;
+    justify-content: center;
+}
+
+.navigation .nav-links {
+    display: flex;
+}
+
+.navigation .page-numbers {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    margin: 5px;
+    background-color: #fff;
+    font-size: 22px;
+    color: #1C2148;
+}
+
+.navigation .page-numbers.current {
+    color: #fff;
+    background-color: #1C2148;
 }
 
 @media (max-width: 1200px) {
