--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,10 @@ nav a:hover {
     top: 90%;
 }
 
+.blue-linear-bg {
+    background: linear-gradient(89.89deg, #1F2552 60.38%, #5B5F7E 99.89%);
+}
+
 section.main {
     height: calc(100vh - 140px);
     background-image: url('../images/main-background.png');
@@ -132,12 +136,26 @@ section.news .img {
     background-repeat: no-repeat;
 }
 
+section.main-info {
+    /*background-position: -50% center;*/
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
 .card {
     background-color: #fff;
     border-radius: 0;
     border: none;
     padding: 40px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+}
+
+.bordered {
+    border: 1px solid #C0B481;
+}
+
+.accordion-header {
+    background-color: #515679;
 }
 
 .caption {
@@ -217,6 +235,13 @@ section.news .img {
     background-blend-mode: color;
 }
 
+.yachts_description {
+    background-image: url('../images/Rectangle20.png');
+    background-repeat: no-repeat;
+    background-size: 20% 80%;
+    background-position: 15% bottom;
+}
+
 @media (max-width: 1200px) {
     nav a {
         font-size: .8rem;
@@ -226,5 +251,42 @@ section.news .img {
 @media (max-width: 990px) {
     section.main {
         background-position: center center;
+    }
+    section.main-info {
+        background-position: center left;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .yachts_description {
+        background-image: none;
+    }
+    .yachts_description img {
+        width: 100% !important;
+    }
+}
+
+@media (max-width: 400px) {
+    h2 {
+        font-size: 1.5rem;
+    }
+    .blue-linear-bg {
+        padding: .8rem 1rem !important;
+    }
+    section.main .col-md-6 {
+        text-align: center;
+    }
+    section.main .col-md-6 .justify-content-end {
+        justify-content: center !important;
+    }
+    .all-yachts_card {
+        background-color: rgba(0,0,0, .5);
+        background-blend-mode: color;
+    }
+    .all-yachts .pr-0 {
+        padding-right: 15px !important;
+    }
+    .all-yachts .hidden_down {
+        transform: translateY(0);
+        padding: 0 0 15px 0 !important;
     }
 }
