--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,16 @@ body {
     background-color: #f5f5f5;
 }
 
+.footer_menu .navbar-nav {
+    align-items: start !important;
+    font-size: 16px;
+}
+
+.footer_menu a {
+    color: white;
+    padding: 3px 0;
+}
+
 .font-open-sans {
     font-family: 'Open Sans', sans-serif;
 }
@@ -68,11 +78,6 @@ a.text-gold:hover {
     padding: 15px !important;
     height: 100% !important;
     border: 1px solid #575757;
-}
-
-.feedback .col-md-6 {
-    padding-right: 20px !important;
-    padding-left: 20px !important;
 }
 
 .feedback .col-md-6.first_col {
@@ -193,7 +198,11 @@ section.main {
 
 section.main h1 {
     font-size: 2rem;
-    text-shadow: 2px 2px 4px rgba(255, 255, 255, .5);
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.38);
+}
+
+section.main .col-md-6 .d-flex.justify-content-end {
+    justify-content: start !important;
 }
 
 section.yachts, section.new-yacht {
@@ -349,6 +358,36 @@ section.main-info {
     }
     .yachts_description img {
         width: 100% !important;
+    }
+}
+@media (max-width: 420px) {
+
+    #menu-main-menu {
+        display: block !important;
+    }
+
+    #menu-main-menu li a {
+        font-size: 16px;
+    }
+
+    section.main {
+        height: 250px;
+    }
+
+    section.main h1 {
+        font-weight: normal !important;
+        color: #fff;
+    }
+
+    .card {
+        padding: 20px;
+    }
+
+    .card ul {
+        padding-left: 1rem;
+    }
+    footer .col-lg-4 {
+        justify-content: start !important;
     }
 }
 
